polished by Elena

--- a/tex/ack.tex
+++ b/tex/ack.tex
@@ -8,7 +8,7 @@
 
 感谢和我同级的余博识同学，他和我共同协作，讨论了许许多多的问题，为我提供了新的研究思路。在实验室期间，他和我合作完成了实验环境的配置，实验数据的统计，以及项目文档的撰写。他和我朝夕相处，是我最好的战友和伙伴。感谢在交大期间遇到的同学和朋友，是你们让我的生活更加丰富，是你们和我一起完成各项大作业，和我一起自习一起健身，一起吃饭一起娱乐，让我收获了美好真挚的友谊。
 
-感谢宿舍的宿管阿姨，以及食堂的大师傅们，是你们照顾同学们的饮食起居，保证了学校生活的安全和便利，对我们无微不至地照顾。感谢你们！感谢我的父母家人，没有你们的支持，我也无法完成本科的学业与毕业设计。还要感谢其他许许多多的老师与同学，你们是我大学生活的记忆，祝愿你们前途似锦，生活愉快，事业有成！
+感谢宿舍的宿管阿姨，以及食堂的大师傅们，是你们照顾同学们的饮食起居，保证了学校生活的安全和便利，对我们无微不至地照顾。感谢你们！感谢我的父母家人，没有你们的支持，我也无法完成本科的学业与毕业设计。感谢我的女朋友，她在百忙之中为我润色了论文，使得语句更加通畅。还要感谢其他许许多多的老师与同学，你们是我大学生活的记忆，祝愿你们前途似锦，生活愉快，事业有成！
 
   
 
