--- a/tex/chapter02.tex
+++ b/tex/chapter02.tex
@@ -49,9 +49,9 @@ Linux内核使用Node（节点）、Zone（区）、Page（页）三级结构描
 VMM又可分为Type-\uppercase\expandafter{\romannumeral1}型和Type-\uppercase\expandafter{\romannumeral2}型。Type-\uppercase\expandafter{\romannumeral1}型又称为Hypervisor型，这个类型的虚拟机监控器直接运行在裸金属上，全权负责虚拟机的创建、调度、运行、电源管理等，是一个完备的操作系统，所以需要编写大量驱动以及操作系统功能，工程量较大，但也具有更好的性能。而Type-\uppercase\expandafter{\romannumeral2}型VMM事实上是host OS的一部分（内核模块），仅仅具有虚拟化的功能，而最基本的操作系统功能由host OS负责完成。还有混合型虚拟机监控器，它同样运行在裸金属上，但是将设备驱动、设备模型的控制权交由一个特权虚拟机。Xen属于混合性虚拟机，它将操作系统应当实现的功能交由domain 0这一特权操作系统完成。然而，Type-\uppercase\expandafter{\romannumeral1}型和混合型虚拟机都要求客户机操作系统进行特定的修改，这对闭源操作系统是不现实的，而且这种修改减小了虚拟化的灵活性，使得操作系统不容易部署在这类虚拟机监控器上，故这两类虚拟机监控器没有得到大范围应用。而开源虚拟机监控器QEMU-KVM属于Type-\uppercase\expandafter{\romannumeral2}型，KVM\cite{KVM}是Linux内核中安装的kernel module（Linux内核模块），而QEMU\cite{QEMU}是运行于用户态的宿主机应用程序，主要负责应对客户机的I/O请求，将KVM作为其虚拟化加速器，KVM利用x86处理器的VT-x、EPT等硬件辅助虚拟化功能获得了更优的虚拟机执行效率，而无需修改客户机操作系统，因此得到了广泛的应用。下一节我们讲述如何对QEMU-KVM进行修改来实现巨型虚拟机。
 
 \subsection{巨型虚拟机架构实现}
-巨型虚拟机属于分布式虚拟机，即把一个分布式系统作为运行的物理基础，对上层提供统一的操作系统接口。其主要目的是为了资源聚合，即将分布式系统中的多个普通单机聚合起来，形成一个纵向扩展的虚拟机。例如，普通计算机的CPU核心数目一般在50以内，而更多CPU核心数目的机器则会非常昂贵\footnote{36个CPU核心是服务器较为典型的配置。详见 https://www.quora.com/What-are-the-specs-of-a-typical-modern-server}。有了巨型虚拟机，我们可以将多个普通且廉价的物理机聚合起来，启动一个拥有海量资源的虚拟机，例如将5个配备36个CPU的服务器进行资源聚集，我们可以得到一个拥有180个虚拟CPU的客户机，这是单个物理机很难达到的配置，同时具有了纵向扩展系统和横向扩展系统的优势。
+巨型虚拟机属于分布式虚拟机，即把一个分布式系统作为运行的物理基础，对上层提供统一的操作系统接口。其主要目的是为了资源聚合，即将分布式系统中的多个普通单机聚合起来，形成一个纵向扩展的虚拟机。例如，普通计算机的CPU核心数目一般在50以内，而更多CPU核心数目的机器则会非常昂贵\footnote{36个CPU核心是服务器较为典型的配置。详见 https://www.quora.com/What-are-the-specs-of-a-typical-modern-server}。有了巨型虚拟机，我们可以将多个普通且廉价的物理机聚合起来，启动一个拥有海量资源的虚拟机，例如将5个配备36个CPU的服务器进行资源聚集，我们可以得到一个拥有180个虚拟CPU的客户机，这是单个物理机很难达到的配置，但又为上层操作系统提供了单一机器的虚拟硬件资源，所以同时具有了纵向扩展系统和横向扩展系统的优势。
 
-巨型虚拟机基于QEMU-KVM这一Type-\uppercase\expandafter{\romannumeral2}型虚拟机监控器（修改后的QEMU称作dQEMU，distributed\ QEMU），将QEMU-KVM扩展为分布式虚拟机。其实现主要分为三个部分，这与系统虚拟化常见的三个需要完成的部分相同：实现分布式vCPU、分布式虚拟内存，以及分布式虚拟I/O。支持巨型虚拟机运行的物理基础是多个物理机组成的集群，在集群的每个节点上，都运行着一个巨型虚拟机的dQEMU实例。每个实例都拥有整个集群的资源，但是属于本机的资源标记为local（本地资源），而集群中其他节点的资源标记为remote（远程资源）。当本地虚拟机实例对远程资源发起请求的时候，路由模块会找到所访问资源的真实位置，将资源请求转发到真正拥有该资源的节点上。而内存资源是一个例外：所有的虚拟机的QEMU实例拥有全部的内存资源，由DSM（distributed shared memory）进行提供。完成分布式虚拟化的三个主要功能模块有：
+巨型虚拟机基于QEMU-KVM这一Type-\uppercase\expandafter{\romannumeral2}型虚拟机监控器（修改后的QEMU称作dQEMU，distributed\ QEMU），将QEMU-KVM扩展为分布式虚拟机。其实现主要分为三个部分，这与系统虚拟化常见的三个需要完成的部分相同：实现分布式vCPU、分布式虚拟内存，以及分布式虚拟I/O。支持巨型虚拟机运行的物理基础是多个物理机组成的集群，在集群的每个节点上，都运行着一个巨型虚拟机的dQEMU实例。每个实例都拥有整个集群的资源，属于本机的资源标记为local（本地资源），而集群中其他节点的资源标记为remote（远程资源）。当本地虚拟机实例对远程资源发起请求的时候，路由模块会找到所访问资源的真实位置，将资源请求转发到真正拥有该资源的节点上。而内存资源是一个例外：所有的虚拟机的QEMU实例拥有全部的内存资源，由DSM（distributed shared memory）进行提供。完成分布式虚拟化的三个主要功能模块有：
 
 
 \noindent\textbf{分布式vCPU}\quad 巨型虚拟机添加了新的QEMU参数，将一部分本地运行的vCPU标记为local vCPU，而其他未标记的vCPU则是remote vCPU。QEMU为所有的vCPU创建APIC。local vCPU线程在完成初始化之后可以继续执行，而remote vCPU线程初始化完成后阻塞（被调度器放置于睡眠队列），直到虚拟机被销毁。当有IPI（inter processor interrupt，处理器间中断）发送给vCPU时，会向目标APIC的APIC ID寄存器、LDR（Logical Destination Register）寄存器、DFR（Destination Format Register）寄存器写入IPI请求。远端vCPU的APIC称为dummy APIC（傀儡APIC）。dQEMU为每个vCPU在其本地QEMU实例上维护一个真实APIC，而在其他的所有QEMU实例上维护一个dummy APIC。在写入请求时，检查该IPI是否发送给远程vCPU，即检查上述三个寄存器的写入是否是对dummy APIC进行写入。如果是发送给本地vCPU，即向真实APIC写入，则按照原有流程处理；否则，该QEMU实例将对IPI请求进行转发，将IPI注入到远程APIC，同时将集群中所有该vCPU的APIC拷贝强制同步，由远程的QEMU实例接收IPI请求并进行处理。如果集群中有四个节点，每个节点分别运行QEMU 0-3，而每个QEMU实例分别有vCPU 0-3。当vCPU 0向vCPU 3发送中断时，先向QEMU 0中vCPU 3的dummy APIC写入上述三个寄存器，同时QEMU 1-3从QEMU 0得到最新的APIC状态。QEMU 3通过APIC识别出vCPU 3是IPI的接收者，故QEMU 3将IPI注入到vCPU 3。
@@ -74,7 +74,7 @@ VMM又可分为Type-\uppercase\expandafter{\romannumeral1}型和Type-\uppercase\
 \section{分布式共享内存性能分析}
 \subsection{性能瓶颈}
 \label{chap:bottle}
-如\ref{chap:DSM}节所述，巨型虚拟机相比于普通虚拟机的实现增加的部分有：（1）分布式共享内存，这一部分需要通过RDMA、TCP等网络协议在集群之间同步物理页的状态；（2）转发机制，将对于远程资源的访问请求转发到对应的节点上去，由真实的资源拥有者处理访问请求。这两部分均会产生网络开销，而网络开销最大的则是分布式共享内存这一组件。由于顺序一致性是是较强的一致性模型，分布式共享内存会产生false sharing（伪共享）现象和page thrashing（页面颠簸）现象\cite{sharing}。伪共享现象是指两个运行在不同CPU核心上的线程不断地写入同一个cache line（缓存行）中的变量，当其中一个线程对变量写入后，另一个核上的缓存行即会失效，于是另一个线程需要从内存中读取最新的数据，而写入变量的线程也需要将缓存行写回主存。如此循环往复即出现了伪共享现象。而页面颠簸现象是由于内存页的换入换出。当一个进程频繁访问的页面数量多于总的物理页面数量，或者操作系统为进程选取的驻留集大小（RSS，可以通过ps aux等命令行工具观察进程的驻留集大小）小于其频繁访问的虚拟空间大小，则会有虚拟页面不断换出到磁盘上，即产生了页面抖动现象。
+如\ref{chap:DSM}节所述，巨型虚拟机相比于普通虚拟机的实现增加的部分有：（1）分布式共享内存，这一部分需要通过RDMA、TCP等网络协议在集群之间同步物理页的状态；（2）转发机制，将对于远程资源的访问请求转发到对应的节点上去，由真实的资源拥有者处理访问请求。这两部分均会产生网络开销，而网络开销最大的则是分布式共享内存这一组件。顺序一致性是较强的一致性模型，会产生false sharing（伪共享）现象和page thrashing（页面颠簸）现象\cite{sharing}。伪共享现象是指两个运行在不同CPU核心上的线程不断地写入同一个cache line（缓存行）中的变量，当其中一个线程对变量写入后，另一个核上的缓存行即会失效，于是另一个线程需要从内存中读取最新的数据，而写入变量的线程也需要将缓存行写回主存。如此循环往复即出现了伪共享现象。而页面颠簸现象是由于内存页的换入换出。当一个进程频繁访问的页面数量多于总的物理页面数量，或者操作系统为进程选取的驻留集大小（RSS，可以通过ps aux等命令行工具观察进程的驻留集大小）小于其频繁访问的虚拟空间大小，则会有虚拟页面不断换出到磁盘上，即产生了页面抖动现象。
 
 \label{chap:STOR}
 伪共享现象和页面抖动现象都是因为不同层次的存储器访问延迟大不相同造成的。现代计算机有如下几个存储器层次\cite{csapp}：
@@ -86,7 +86,7 @@ VMM又可分为Type-\uppercase\expandafter{\romannumeral1}型和Type-\uppercase\
   \item L6 远程二级存储（Web服务器等）：经过网络协议与网络进行数据交换，访问时间约为150,000,000纳秒\footnote{数据来源：https://stackoverflow.com/questions/4087280/approximate-cost-to-access-various-caches-and-main-memory}。
 \end{itemize}
 
-为了获得更大的容量，则会遭受更高的延迟。由于分布式共享内存增加了物理内存的容量，需要通过网络访问远程节点的内存，相比于本地内存访问增加了网络开销，所以成为了性能瓶颈。如果在不同节点上的应用程序频繁访问共享的地址空间（如内存密集型任务、I/O密集型任务），则需要分布式共享内存模块进行大量的内存同步工作，不仅造成客户机内存访问的延迟明显提高，使得巨型虚拟机可扩展性降低，还会占用集群中宝贵的网络带宽。虽然分布式共享内存模块已经利用RDMA、压缩优化等技术大大减小了其占用的网络带宽，但仍需要解决根本问题，对巨型虚拟机的客户机调度器进行重新设计，使得节点间访问共享内存的机会更少，增强客户机内存访问的局部性。
+为了获得更大的内存容量，不可避免的会遭受更高的访存延迟，这对于NUMA架构系统和分布式共享内存是一样的。分布式共享内存增加了物理内存的容量，需要通过网络访问远程节点的内存，相比于本地内存访问增加了网络开销，造成了性能瓶颈。如果在不同节点上的应用程序频繁访问共享的地址空间（如内存密集型任务、I/O密集型任务），则需要分布式共享内存模块进行大量的内存同步工作，不仅造成客户机内存访问的延迟明显提高，使得巨型虚拟机可扩展性降低，还会占用集群中宝贵的网络带宽。虽然分布式共享内存模块已经利用RDMA、压缩优化等技术大大减小了其占用的网络带宽，但仍需要解决根本问题。我们通过设计一个巨型虚拟机客户机的DSM专用调度器，使得节点间访问共享内存的机会更少，增强客户机内存访问的局部性，从客户机的角度解决了根本问题。
 \subsection{增强访存局部性的方式}
 由\ref{chap:mem}节和\ref{chap:memm}节所述，造成进程之间频繁访问共享内存的原因之一是共享的内核数据和代码。由于对内核数据结构的频繁访问，硬件为了保持缓存一致性，会频繁的从内存中读写数据，造成如上节所属的分布式共享内存所遇到的两个问题。于是，来自ETH Zurich的研究者们从操作系统的内核架构开刀，将宏内核切分开来，实现了一个多内核操作系统Barrelfish\cite{barrelfish}。Barrelfish操作系统将现代的计算机系统视作一个网络，每一个CPU核以及它所附带的缓存是该网络中的一个节点。其设计理念有如下三点：
 
@@ -99,29 +99,29 @@ VMM又可分为Type-\uppercase\expandafter{\romannumeral1}型和Type-\uppercase\
   \label{fig:barrelfish}
 \end{figure}
 
-\noindent\textbf{核间显式通信}\quad 在宏内核的操作系统中，CPU核与CPU核之间的通信大量依赖于共享内存。然而，如果将单个计算机的硬件视作分布式系统的话，那么将共享内存（shared memory）作为通信的渠道将获得类似于广播的效果：只要映射了这块物理内存的所有进程将会收到这条信息。所以，发送一条信息耗费的时间将会随着硬件系统中的节点数成正比地增加。这是由于CPU在等待缓存一致性机制完成数据同步，从缓存不命中中返回于是发送一条信息的时间也会随着信息量的大小而线性增长。而在消息传递（message passing）模型中，存在服务端线程（server thread）和客户端线程（client thread），服务端线程固定地运行在一个CPU核上，维持着所有客户端线程所需的信息。所有客户端线程只需发送一个远程过程调用（RPC, remote procedure call），虽然远程过程调用所传递的信息依然通过共享内存进行传递，但只是控制面的信息，而真正的数据一直保持在服务端线程的缓存中，不会出现缓存不命中的现象。核与核之间的通信在宏内核中不是显式的，而是隐式的通过共享内存来进行，这样会造成大量不必要的开销。而在Barrelfish操作系统中，核与核之间的通信仅有远程过程调用，而不存在其他类型的通信。故Barrelfish操作系统具有良好的内存访问局部性。
+\noindent\textbf{核间显式通信}\quad 在宏内核的操作系统中，CPU核之间相互通信大量地依赖于共享内存。然而，如果将单个计算机的硬件视作分布式系统的话，那么将共享内存（shared memory）作为通信的渠道将获得类似于广播的效果：映射了这块物理内存的所有进程都将会通过缓存一致性协议，从内存中获取最新的数据，从而收到这条信息。所以，发送一条信息耗费的时间将会随着硬件系统中的节点数成正比地增加。这是由于CPU在等待缓存一致性机制完成数据同步，从缓存不命中的硬件处理过程中返回，于是发送一条信息的时间也会随着信息量的大小而线性增长。而在消息传递（message passing）模型中，存在服务端线程（server thread）和客户端线程（client thread），服务端线程固定地运行在一个CPU核上，维持着所有客户端线程所需的信息。所有客户端线程只需发送一个远程过程调用（RPC, remote procedure call），虽然远程过程调用所传递的信息依然通过共享内存进行传递，但只是控制面的信息，而真正的数据一直保持在服务端线程的缓存中，不会出现缓存不命中的现象。核之间的相互通信在宏内核中不是显式的，而是通过共享内存隐式地来进行，这样会造成大量不必要的开销。而在Barrelfish操作系统中，核与核之间的通信仅有远程过程调用，而不存在其他类型的通信。故Barrelfish操作系统具有良好的内存访问局部性。
 
-\noindent\textbf{操作系统内核与硬件解耦}\quad 这部分设计理念将操作系统内核的通信算法（策略，policy）与硬件相关的通信机制优化（机制，mechanism）进行解耦合，降低工程量。这不在本文的讨论范围内。
+\noindent\textbf{操作系统内核与硬件解耦}\quad 这部分设计理念将操作系统内核的通信算法（策略，policy）与硬件相关的通信机制优化（机制，mechanism）进行解耦合，从而降低工程量。这不在本文的讨论范围内。
 
 \noindent\textbf{全局状态分散为多个副本}\quad 操作系统经常维护一些全局状态，如Linux内核中的runqueue（就绪队列）。当多核时代来临之后，就必须用锁来同步。为了避免锁的开销，常用的办法是将全局状态分解到每一个CPU核上，在Linux 2.4版本\cite{linux}中引入了per-CPU runqueue，极大的提升了调度器的可扩展性，达到了O(1)的运行时间，即调度器运行时间和系统中CPU核的数量无关。在Barrelfish操作系统中，这个概念更进了一步：将所有的内核状态分散在各个CPU核上。如图\ref{fig:barrelfish}所示，内核状态分散在各个CPU核上，只在必要时进行同步。
 
 
-Barrelfish OS较少的核间通信使得其成为了巨型虚拟机理想的客户机操作系统。即使是如I/O密集型的大量访问内核数据结构的任务运行在Barrelfish客户机中，分布式共享内存也应该具有很好的扩展性。我们分别在Linux和Barrelfish上运行了WebServer，Linux的WebServer是Apache2，而Barrelfish OS的Webserver是调用了Barrelfish操作系统接口的Webserver，所以减少了大量不必要的核间通信。使用ab（ApacheBench）\cite{ab}这一测试工具不断地向WebServer发送GET请求，Barrelfish OS上运行的WebServer比Linux中的WebServer处理速度快6.4倍\cite{giantvm}。这是由于Barrelfish OS大大限制了核间通信的次数和传递的信息量，将所有的核间通信限制在RPC中，分布式共享内存发生缺页异常的次数也得到了限制，减小了网络开销。
+Barrelfish OS较少的核间通信使得其成为了巨型虚拟机理想的客户机操作系统。即使是如I/O密集型的大量访问内核数据结构的任务运行在Barrelfish客户机中，分布式共享内存也应该具有很好的扩展性。我们分别在Linux和Barrelfish上运行了WebServer，Linux的WebServer是Apache2，而Barrelfish OS的Webserver是调用了Barrelfish操作系统接口的Webserver，所以减少了大量不必要的核间通信。使用ab（ApacheBench）\cite{ab}这一测试工具不断地向WebServer发送GET请求，Barrelfish OS上运行的WebServer比Linux中的WebServer处理速度快6.4倍\cite{giantvm}。这是由于Barrelfish OS大大限制了核间通信的次数和传递的信息量，将所有的核间通信限制在RPC中，分布式共享内存发生缺页异常的次数也得到了限制，从而减小了网络开销。
 \section{数据中心及其资源利用率}
-数据中心（Internet Data Center）为内容提供商、企业、政府部门等需要对数据进行保存、共享、操作的组织提供了一个高效安全稳定的运行环境。数据中心由数量巨大（成百上千）个服务器组成，每个服务器称作该集群中的一个节点，每个节点之间通过高速的网卡进行连接，同时为其提供稳定的电力供应、温控、及时维护等服务，目的是使得数据中心对外提供高质量、稳定的服务。数据中心的搭建还要考虑成本问题，如果将数据中心搭建在气温较低的环境下，则会为数据中心运营者减少很多散热的成本；CPU也为使用者定义了ACPI（Advanced Configuration and Power Interface，高级电源管理接口，其中规范了G-States、S-States、C-States，可以通过调整CPU和整个系统所处的等级来应对不同要求的任务）规范，给软件编写者一个动态调整CPU功耗的方式，从而充分利用CPU，减少功耗成本。而数据中心的资源利用率问题则是数据中心运营者所考虑的关键：如果提高了资源利用率，则意味着可以通过更少的机器对外提供相同质量的服务，同理也意味着可以使用相同的机器提供质量更好、数量更多的服务（例如更高的吞吐量），从而在节约成本的同时，获取更多的效益。提高数据中心资源使用率在一定程度上等同于数据中心的负载均衡：将负载过重的机器上的工作负载迁移到较空闲的机器上，提高了系统总体的并行度，也提高了系统的资源利用率，一些负载均衡的方法也可以达到提高资源使用率的效果。
+数据中心（Internet Data Center）为内容提供商、企业、政府部门等需要对数据进行保存、共享、操作的组织提供了一个高效安全稳定的运行环境。数据中心由数量巨大的服务器组成（本文将会模拟一个由800台机器组成的数据中心），每个服务器称作该集群中的一个节点，每个节点之间通过高速的网卡进行连接，同时为其提供稳定的电力供应、温控、及时维护等服务，目的是使得数据中心对外提供高质量、稳定的服务。数据中心的搭建还要考虑成本问题，如果将数据中心搭建在气温较低的环境下，则会为数据中心运营者减少很多散热的成本；CPU也为使用者定义了ACPI（Advanced Configuration and Power Interface，高级电源管理接口，其中规范了G-States、S-States、C-States，可以通过调整CPU和整个系统所处的等级来应对不同要求的任务）规范，给软件编写者一个动态调整CPU功耗的方式，从而充分利用CPU，减少功耗成本。而数据中心的资源利用率问题则是数据中心运营者所考虑的关键：如果提高了资源利用率，则意味着可以通过更少的机器对外提供相同质量的服务，同理也意味着可以使用相同的机器提供质量更好、数量更多的服务（例如更高的吞吐量），从而在节约成本的同时，获取更多的效益。提高数据中心资源使用率在一定程度上等同于数据中心的负载均衡：将负载过重的机器上的工作负载迁移到较空闲的机器上，提高了系统总体的并行度，也提高了系统的资源利用率，一些负载均衡的方法也可以达到提高资源使用率的效果。
 
 本文使用基尼系数（Gini Coefficient）\cite{gini}衡量集群CPU资源使用率的均衡情况。基尼系数普遍用于计量经济学，用来表征居民收入的不平均程度。基尼系数是0到1之间的一个数，对于一组完全相同的数据，其基尼系数为0，即最平均；低于0.2则意味着这组数据高度平均，在0.2-0.29之间表示比较平均，0.3-0.39之间表明平均程度一般，0.4-0.59之间则表示同组之间数据差距较大，而在0.6以上则表明这组数据极为不平均。一组全部为1的数据的基尼系数为0，而对于一组均匀分布在0和1之间的数据，其基尼系数为0.333（三分之一），对于有一千个0和一个1的数据，其基尼系数接近于1。我们将其应用在分析数据中心的CPU占用率上，我们认为集群总体的CPU资源占用率的基尼系数在0.25以下表明该集群的负载比较均衡，资源使用率也较高。
 
 历史上，提高数据中心资源利用率的方式有如下三种：
 
-（1）任务混部：这是最符合直觉的一种提高资源利用率的方式，即将更多的任务放在同一个资源较为充裕的机器（或几个机器）中，这样必然使得固定数额的资源得到更好的利用。但是这会对被混部在一起的任务造成影响，由于对资源的更加强烈的竞争，某些获得不到充足资源的任务的服务质量将无法达到预期程度，即服务质量遭到破，又称QoS\,violation。由于任务的多样性及其工作负载的多变性，资源控制器不能及时地调整任务的混部情况；即使在同一个节点上有很多方式限制一个进程的资源使用量（如cgroup，一种限制单个进程或一组进程的资源使用量的机制），但这依然无法实时地保证各个进程获得了充足的资源。
+（1）任务混部：这是最符合直觉的一种提高资源利用率的方式，即将更多的任务放在同一个资源较为充裕的机器（或几个机器）中，这样必然使得固定数额的资源得到更好的利用。但是这会对被混部在一起的任务造成影响，由于对资源的更加强烈的竞争，对于某些得不到充足资源的任务，其服务质量将无法达到预期程度，即会遭受QoS\,violation。由于任务的多样性及其工作负载的多变性，资源控制器不能及时地调整任务的混部情况；即使在同一个节点上有很多方式限制一个进程的资源使用量（如cgroup，一种限制单个进程或一组进程的资源使用量的机制），但这依然无法实时地保证每个进程能够获得充足的资源。
 
 （2）工作负载即时采样：通过硬件或者软件的手段对任务的资源占用情况进行即时的采样，根据任务在过去一段时间里的工作负载情况预测未来一段时间内的工作负载情况。例如，最常用的Linux内核所实现的完全公平调度器（CFS，Completely Fair Scheduler）即是采用了这一种策略：在内核表示任务的结构体struct task\_struct中内嵌（由于struct sched\_entity内嵌在struct task\_struct中）一个vruntime变量，记录其已经运行的时间，在每一个调度周期中更新这个变量。每个CPU上的就绪队列维护了一个红黑树，每当一个进程变成可运行状态（RUNNABLE）时将进程按照vruntime添加进入红黑树中，而Linux内核通过vruntime判断在未来一段时间内该进程的运行时间。然而，这样的预测不一定完全准确，甚至有的时候出现完全的预测错误。同时，取样的数据也不一定具有代表性。
 
 \label{chap:reallocation}
-（3）资源重分配：为了解决集群中工作负载分布不均的问题，一种更加灵活的方式是将任务在不同的节点上迁移，将资源在任务之间重新分配。迁移的具体方式有进程级别的迁移（Process Migration）、容器的在线迁移（Container Live Migration），和虚拟机的在线迁移（VM Live Migration）。这类似于任务调度，但发生在集群中的节点之间，用于平衡集群中节点的负载，进而提高集群的资源使用率。在下面的三节中，我们将对这三类迁移机制进行详细的描述，并且讨论其优劣。
+（3）资源重分配：为了解决集群中工作负载分布不均的问题，一种更加灵活的方式是将任务在不同的节点上迁移，将资源在任务之间重新分配。迁移的具体方式有进程级别的迁移（Process Migration）、容器的在线迁移（Container Live Migration），和虚拟机的在线迁移（VM Live Migration）。迁移是一种发生在集群节点之间的任务调度，用于平衡集群中节点的负载，进而提高集群的资源使用率。在下面的三节中，我们将对这三类迁移机制进行详细的描述，并且讨论其优劣。
 \subsection{进程迁移}
-进程级别的迁移主要具有两方面的作用，性能提升和容错\cite{processmigration}。首先是可以得到性能上的提升，进程从较为繁忙的处理器上重新分布到较为空闲的处理器上，使得处理器的负载尽可能均衡，从而提高了系统中进程的并行度和处理器的平均使用率。同时，进程访问物理上较远处的资源会造成更大的通讯开销，例如在非一致性内存访问系统中，访问远程NUMA节点的内存比访问本地内存的开销要大得多，所以Linux内核为适应NUMA架构则将进程迁移到其所访问的内存所在的节点上。其次，进程迁移有助于提高大型系统中的错误包容（Fault Tolerance， FT）能力。现今的大规模分布式任务可同时使用的处理器个数已经成千上万，在如此庞大的系统中，出现CPU核、内存、网卡、磁盘等部件崩溃的情况越来越多。数据的可靠性可以通过增加副本的方式解决，但会占用额外的资源。进程级迁移为容错提供了一个新的选项，即可以以一种对软件透明的方式，把遇到硬件崩溃的进程停止，为其进行快照，保存其运行状态，迁移到硬件可以正常工作的环境下恢复进程的执行。进程调度由进程管理线程或由进程自身发起。当该管理线程探测到某些进程满足了迁移的条件，如主机的负载过高，则向操作系统内核发起一个进程迁移请求，于是被迁移的进程被标记为In Migration，并将其移出runqueue，但其运行状态不被改变，由于其到达目的主机之后的进程状态应当不被改变。当源主机做好迁移准备后，即向目标主机内核发送一个信息，请求线程的移入，请求附带的信息有进程的资源占用情况和运行状态等。如果目标主机可以接收该进程，则为该进程分配资源。完成分配后，即将源主机上的进程状态复制到目标主机上，同时复制其他进程资源。拷贝完成后，源主机将所有发向该进程的信息转发给目标主机，并等待目标主机上的进程重新恢复执行。最后的任务包括释放源主机上的进程资源，以及恢复目标主机上进程的执行。为了提高进程迁移的效率，有不同的算法被先后提出\cite{migrationppt}。如Lazy copy（延迟拷贝）算法，将被迁移进程从源主机的运行队列里移除之后，首先传输进程在目标主机上执行所需的最小信息，使得进程的In Migration时间缩到最短。但是由于未迁移的状态仍保留在源主机上，如果源主机在进程迁移的过程中崩溃，则被迁移的进程所拥有的信息会遭到丢失，增加了进程的不可靠性。同时，打开的文件、共享内存和发送的信息等资源作为进程间通讯的手段，改变了进程通信的愿有语义，会给被迁移进程带来残余依赖性问题。故进程迁移没有被工业界大规模使用，应用程序也很少有对进程迁移的适配。
+进程级别的迁移主要具有两方面的作用，性能提升和容错\cite{processmigration}。首先是可以得到性能上的提升，进程从较为繁忙的处理器上重新分布到较为空闲的处理器上，使得处理器的负载尽可能均衡，从而提高了系统中进程的并行度和处理器的平均使用率。同时，进程访问物理上较远处的资源会造成更大的通讯开销，例如在非一致性内存访问系统中，访问远程NUMA节点的内存比访问本地内存的开销要大得多，所以Linux内核为适应NUMA架构则将进程迁移到其所访问的内存所在的节点上。其次，进程迁移有助于提高大型系统中的错误包容（Fault Tolerance， FT）能力。现如今，大规模分布式任务可同时使用的处理器已经有成千上万个，在如此庞大的系统中，出现CPU核、内存、网卡、磁盘等部件崩溃的情况越来越多。数据的可靠性可以通过增加副本的方式解决，但会占用额外的资源。进程级迁移为容错提供了一个新的选项，即可以通过一种对软件透明的方式，把遇到硬件崩溃的进程停止，为其进行快照，保存其运行状态，迁移到硬件可以正常工作的环境下恢复进程的执行。进程调度由进程管理线程或由进程自身发起。当该管理线程探测到某些进程满足了迁移的条件，如主机的负载过高，则会向操作系统内核发起一个进程迁移请求，于是被迁移的进程被标记为In Migration，并将其移出runqueue，但其运行状态不被改变。当源主机做好迁移准备后，即向目标主机内核发送一个信息，请求线程的移入，请求附带的信息有进程的资源占用情况和运行状态等。如果目标主机可以接收该进程，则为该进程分配资源。完成分配后，即将源主机上的进程状态复制到目标主机上，同时复制其他进程资源。拷贝完成后，源主机将所有发向该进程的信息转发给目标主机，并等待目标主机上的进程重新恢复执行。最后的任务包括释放源主机上的进程资源，以及恢复目标主机上进程的执行。为了提高进程迁移的效率，有不同的算法被先后提出\cite{migrationppt}。如Lazy copy（延迟拷贝）算法，将被迁移进程从源主机的运行队列里移除之后，首先传输进程在目标主机上执行所需的最小信息，使得进程的In Migration时间缩到最短。但是由于未迁移的状态仍保留在源主机上，如果源主机在进程迁移的过程中崩溃，则被迁移的进程所拥有的信息会遭到丢失，增加了进程的不可靠性。同时，打开的文件、共享内存和发送的信息等资源作为进程间通讯的手段，改变了进程通信的愿有语义，会给被迁移进程带来残余依赖性问题。故进程迁移没有被工业界大规模使用，应用程序也很少有对进程迁移的适配。
 \subsection{容器热迁移}
 \label{chap:containermigration}
 容器（container）\cite{container}的出现最初是为了解决应用程序配置部署环境的问题。容器技术将应用程序的运行环境与应用程序本身绑定，将应用程序和其运行环境打包为一个独立的容器镜像，在任何环境下无需重复配置环境即可部署。容器技术同时解决了上述的残余依赖问题，将进程运行在一个具有所有其运行所需的最小资源环境里，与其他进程使用的资源隔离。容器技术因为其轻量、标准化、安全性高等特点，受到微服务（MicroService）架构的青睐。容器相比于虚拟机的启动时间小、内存足迹（memory footprint）小、迁移的网络开销小，可以在同一台服务器上部署成千上万的容器，而虚拟机则拥有整个操作系统的信息，单台机器上无法做到高密度的部署。事实上，一个容器实例是Linux系统中的一个进程，只是和普通的进程相比增加了Namespace、cgroups等运行参数，取消了进程层面上的共享，把残余依赖限制在同一个容器实例中。容器的热迁移\cite{Voyager}具有和进程迁移相似的作用：负载均衡和容错。对于容器迁移的优化目标是缩短Downtime（下线时间），尽可能地减小对服务质量的影响。
