--- a/tex/chapter01.tex
+++ b/tex/chapter01.tex
@@ -22,7 +22,7 @@
 
 
 \section{本文结构}
-本文将按如下步骤进行叙述：
+本文按如下步骤进行叙述：
 \begin{itemize}
   \item 第一章介绍了本文所做工作的背景和研究意义，大致描述了本文的工作背景、工作成果以及本文的行文结构。
   \item 第二章介绍了本文的技术背景，包含进程的内存布局、NUMA架构相关优化，以及巨型虚拟机的实现架构对客户机内任务的性能影响，最后分析比较了数据中心任务负载的三种迁移方式，引出后文巨型虚拟机内调度器的设计。
