--- a/tex/chapter05.tex
+++ b/tex/chapter05.tex
@@ -9,6 +9,7 @@
 
 \section{粗粒度调度算法的测试}
 粗粒度调度算法基于Bash脚本实现（rebalance.sh），作为巨型虚拟机客户机的启动项运行在客户机中。巨型虚拟机部署在有四个节点的真实集群中，四个节点的配置如表\ref{tab:config}所示。每个节点有16个CPU核，128GB主存，节点之间通过网络相连。巨型虚拟机实例拥有32个vCPU，12G内存，每个节点上分别有8个本地vCPU。故巨型虚拟机给上层客户机呈现了一个NUMA架构的机器，共4个NUMA节点，分别为Node\,0-3，分别运行在Host\,0-3上。rebalance.sh脚本在客户机启动时首先将所有客户机内进程固定在Node\,0上，在此之后每隔2秒计算巨型虚拟机4个NUMA节点的steal time，如果当前处于活动状态的Node上steal time大于50个节拍，则将所有进程重新固定到steal time最低的节点。
+
 \begin{table}[!htpb]
   \bicaption[测试集群配置]{测试集群配置}{Cluster Configuration in the Experiment}
   \label{tab:config}
@@ -34,7 +35,7 @@
   \end{threeparttable}
 \end{table}
 
-为了测试巨型虚拟机的集群负载平衡能力，我们在Host\,0-3上分别启动了32个Memcached\cite{memcached}服务线程（Memcached Server），分别处理来自于Client\,0-3的Memcached写请求。Client端调用$libmemcached$库，每隔$gauss()$时间发出一批请求。在真实的工作负载中，客户端发送请求的间隔时间呈现高斯分布\footnote{高斯分布是常见的分布，详见https://en.wikipedia.org/wiki/Normal\_distribution}，故我们的客户端也是经过每隔$gauss()$时间发送请求。如图\ref{fig:load}，我们测量了Memcached服务器的CPU工作负载在60秒内的变化情况，颜色越深表示工作负载越高。可以看出，Host\,3工作负载较其他三个Host更低，有大片的白色区域。这些白色区域是巨型虚拟机可以动态填补的区域，将白色区域分配给巨型虚拟机的工作负载将提高整个集群的CPU使用率。
+为了测试巨型虚拟机的集群负载平衡能力，我们在Host\,0-3上分别启动了32个Memcached\cite{memcached}服务线程（Memcached Server），分别处理来自于Client\,0-3的Memcached写请求。Client端调用$libmemcached$库，每隔$gauss()$时间发出一批请求。在真实的工作负载中，客户端发送请求的间隔时间呈现高斯分布\footnote{高斯分布是常见的分布，详见https://en.wikipedia.org/wiki/Normal\_distribution}，我们的客户端也是每隔$gauss()$的时间发送一批请求。如图\ref{fig:load}，我们测量了Memcached服务器的CPU工作负载在60秒内的变化情况，颜色越深表示工作负载越高。可以看出，Host\,3工作负载较其他三个Host更低，有大片的白色区域。这些白色区域是巨型虚拟机可以动态填补的区域，将白色区域重新分配给巨型虚拟机的工作负载即可提高整个集群的CPU使用率。
 
 \begin{figure}[!htp]
   \centering
@@ -45,7 +46,7 @@
   \label{fig:load}
 \end{figure}
 
-我们在巨型虚拟机中运行phoronix-test-suite\cite{phoronix}的pts/openssl benchmark作为尽力而为型任务，用于动态填补CPU使用率的空缺。Memcached属于延迟敏感型任务，我们测量Memcached请求的延迟来测量巨型虚拟机对延迟敏感型任务的影响程度。如图\ref{fig:latency}，我们测量了每个Memcached写请求的Latency，并计算了所有写请求Latency数据的平均数、95分位数、99分位数，用来全面的观察每个请求的延迟，以及尾延迟，还统计了整个测试过程中的请求处理速度QPS。与巨型虚拟机对比的对象是固定运行在Host\,0上的未修改的QEMU-KVM虚拟机（LC + Vanilla VM），具有8个vCPU，12G内存，以及没有虚拟机只有Memcached服务线程运行的情况（LC only）。可以看出，Vanilla VM对Memcached性能影响十分显著，而从延迟平均值看，巨型虚拟机对Memcached的影响微乎其微，只有在99分位数上有较大的影响。巨型虚拟机也未明显影响Memcached的QPS，每秒仅减少了10个左右的请求。
+我们在巨型虚拟机中运行phoronix-test-suite\cite{phoronix}的pts/openssl benchmark作为尽力而为型任务，用于动态填补CPU使用率的空缺。Memcached属于延迟敏感型任务，我们测量Memcached请求的延迟来测量巨型虚拟机对延迟敏感型任务的影响程度。如图\ref{fig:latency}，我们测量了每个Memcached写请求的Latency，并计算了所有写请求的Latency的平均数、95分位数、99分位数，用来全面的观察每个请求的延迟，以及尾延迟，还统计了整个测试过程中的请求处理速度QPS（每秒请求数）。与巨型虚拟机对比的对象是固定运行在Host\,0上的未修改的QEMU-KVM虚拟机（LC + Vanilla VM，这个虚拟机具有8个vCPU，12G内存），以及没有虚拟机只有Memcached服务线程运行的情况（LC only）。可以看出，Vanilla VM对Memcached性能影响十分显著，而从延迟平均值看，巨型虚拟机对Memcached的影响较小，只有在99分位数上有较大的影响。巨型虚拟机也未明显影响Memcached的QPS，平均每秒仅减少了10个左右的请求。
 
 \begin{figure}[!htp]
   \centering
@@ -55,6 +56,7 @@
     {Comparison of Memcached Requests Performance in Three Kinds of Co-location}
   \label{fig:latency}
 \end{figure}
+
 集群中CPU的负载均衡也是我们的设计目标。为此，我们记录了测试期间Host\,0-3上的CPU占用率变化情况，统计了平均值和基尼系数。如图\ref{fig:cpuload}，相比于只运行Memcached服务线程的情况，Vanilla VM对集群总体的CPU利用率（即CPU的平均占用率）提升小于巨型虚拟机，CPU利用率的基尼系数相较于巨型虚拟机也更高。这是由于巨型虚拟机总是动态地迁移到CPU利用率低的节点，而普通虚拟机无法感知Host上的工作负载。pts/openssl测试结果也符合我们的设想，巨型虚拟机内每秒可完成714个签名（Signs），而普通虚拟机中只能完成708个，这说明，有迁移能力的虚拟机不但维持了宿主机上LC型任务的性能，还保持了客户机内BE型任务的性能。综上，真实环境下的巨型虚拟机调度器达到了设计目标。
 \begin{figure}[!htp]
   \centering
@@ -79,9 +81,9 @@
 \end{figure}
 本文运行仿真脚本的Python版本是Python3.5.2，使用了Google clusterdata-2011-2其中的$task\_events$中part-00000-of-00500.csv到part-00009-of-00500.csv共10个csv数据表，以及$task\_usage$中的part-00000-of-00500.csv共1个csv数据表。我们没有使用更多的数据表，是因为数据加载时间过长，且这一部分数据量已经足够大，具有很好的代表性。
 
-测试的可变参数有：（1）平衡策略，有：不平衡（$no\_migration$）、粗粒度平衡（$coarse\_grained$）、未排序的细粒度平衡（$fine\_grained$）、根据CPU请求量排序的细粒度平衡（$cpu\_request$）、根据CPU当前使用量排序的细粒度平衡（$cpu\_usage$）、根据内存当前使用量排序的细粒度平衡（$mem\_usage$）、根据CPU当前使用量逆排序（从大到小）的细粒度平衡（$1/cpu\_usage$）、根据当前缓存不命中频率排序的细粒度平衡（$cache\_misses$）（2）集群机器数量：任务数量不可变，通过更改集群机器数量配置测试调度脚本性能；（3）资源超量供应系数（$overcommitment\,ratio$）：指调度器真实分配给进程的资源与进程资源请求量的比例。此比例越高，则表明调度器给每个进程提供的超额资源越多，系统资源竞争越小，反之资源竞争越激烈。
+测试的可变参数有：（1）平衡策略，有：不平衡（$no\_migration$）、粗粒度平衡（$coarse\_grained$）、未排序的细粒度平衡（$fine\_grained$）、根据CPU请求量排序的细粒度平衡（$cpu\_request$）、根据CPU当前使用量排序的细粒度平衡（$cpu\_usage$）、根据内存当前使用量排序的细粒度平衡（$mem\_usage$）、根据CPU当前使用量逆排序（从大到小）的细粒度平衡（$1/cpu\_usage$）、根据当前缓存不命中频率排序的细粒度平衡（$cache\_misses$）（2）集群机器数量：任务数量不可变，但可以更改集群机器数量，从而更改集群的资源总量，测试调度脚本在不同资源竞争强度下的平衡性能；（3）资源超量供应系数（$overcommitment\,ratio$）：此系数指调度器真实分配给进程的资源与进程资源请求量的比例。此比例越高，则表明调度器给每个进程分配的超额资源越多，系统资源竞争越小，反之资源竞争越激烈。
 
-如图\ref{fig:cpu_gini}所示，我们首先固定机器个数$N\_MACHINES$为800，$overcommitment\,ratio$为1.0，对比所有调度算法的性能。此时任务的数量不变，集群机器数量也不变。可见，不平衡的调度算法性能最差，其次是粗粒度的调度算法。在细粒度的调度算法中，未排序的算法性能没有明显下降，这是由于测试的随机性；而优先调度$CPU\,usage$较高的算法在细粒度算法中效果最差，符合我们的预期；而按照内存指标排序的算法的性能普遍高于按照CPU指标排序，这是因为在集群中迁移内存占用较大的进程会造成更大的性能损失与网络开销。而基尼系数的变化趋势则与CPU的变化趋势相反，这是由于集群机器数量和任务数量不变，越平衡的调度算法CPU使用率越高，基尼系数越小。
+如图\ref{fig:cpu_gini}所示，我们首先固定机器个数$N\_MACHINES$为800，$overcommitment\,ratio$为1.0，对比所有调度算法的性能。此时任务的数量不变，集群机器数量也不变。可见，不平衡的调度算法性能最差，其次是粗粒度的调度算法。在细粒度的调度算法中，未排序的算法性能没有明显下降，这是由于测试的随机性；而优先调度$CPU\,usage$较高进程的算法在细粒度算法中效果最差，符合我们的预期；而按照内存指标排序的算法的性能普遍高于按照CPU指标排序，这是因为在集群中迁移内存占用较大的进程会造成更大的性能损失与网络开销。而基尼系数的变化趋势则与CPU的变化趋势相反，这是由于集群机器数量和任务数量不变，越平衡的调度算法CPU使用率越高，基尼系数越小。
 
 \begin{figure}[!htp]
   \centering
@@ -126,7 +128,7 @@
 
 随着集群机器数量$N\_MACHINES$的上升，所有算法的CPU使用率均下降，基尼系数均上升，这是因为集群中任务数量是固定的，越多的机器数量则CPU负载越低，空闲机器越多，从而每个任务的资源超量使用量$Overcommit$也下降，延迟$Duration$也下降。随着资源超量提供率$Over\_commitment\_ratio$的上升，任务之间的资源竞争越来越少，系统中空闲的资源越来越多，故集群CPU使用率下降，基尼系数上升，每个任务的资源超量使用量$Overcommit$下降，延迟$Duration$上升。这是由于，当每个进程的$Over\_commitment\_ratio$上升，系统为其分配的资源就变得更多，于是系统中可以容纳的进程数就更少，新到来的进程需要等待更长的时间才可以被调度运行，于是造成了$Duration$的上升。
 
-我们还统计了$N\_MACHINES$和$Over\_commitment\_ratio$对不同的调度算法的网络开销的影响。如图\ref{fig:netcom}，粗粒度的调度算法总是具有最高的网络开销，这是因为它迁移了3个$removed$集合中的进程；在细粒度算法中，按照内存指标排序的算法一般具有更低的网络开销，按照CPU指标排序的算法具有更高的网络开销，而不排序的算法网络开销在CPU指标和内存指标之间，这符合之前的测试与推断。随着集群机器数量的上升，平衡算法的网络开销均减小，这是由于很少有机器的负载超过了警戒线，不会触发迁移机制。而随着$Over\_commitment\_ratio$的提高，系统中同时容纳的进程数量也下降，导致很少有机器的负载超过了警戒线，更少地触发了迁移。
+我们还统计了$N\_MACHINES$和$Over\_commitment\_ratio$对不同的调度算法的网络开销的影响。如图\ref{fig:netcom}，粗粒度的调度算法总是具有最高的网络开销，这是因为它迁移了3个$removed$集合中的进程；在细粒度算法中，按照内存指标排序的算法一般具有更低的网络开销，按照CPU指标排序的算法具有更高的网络开销，而不排序的算法网络开销在CPU指标和内存指标之间，这符合之前的测试与推断。随着集群机器数量的上升，平衡算法的网络开销均减小，这是由于很少有机器的负载超过了警戒线，不会触发迁移机制。而随着$Over\_commitment\_ratio$的提高，系统中同时容纳的进程数量也下降，使得集群中更少机器的负载超过了警戒线，更少地触发了迁移。
 
 \begin{figure}[!htp]
   \centering
