polished by Elena

--- a/tex/chapter04.tex
+++ b/tex/chapter04.tex
@@ -5,7 +5,7 @@
 
 %\bibliographystyle{sjtu2}%[此处用于每章都生产参考文献]
 \chapter{基于集群仿真的调度器设计}
-虽然在直觉上，基于巨型虚拟机的调度器可提高集群的CPU使用率，但目前我们无法在大型集群上验证我们的实现，同时在大型集群上验证的耗时过长，不易及时发现调度器的性能瓶颈并且快速调整相关参数。本章利用谷歌提供的大型集群中任务调度与任务资源使用情况的追踪数据（trace data）模拟大型集群中真实的任务负载，对之前提出的调度策略进行仿真，并优化其调度算法。在开始使用追踪数据之前，应当对追踪数据的内容做大致介绍。
+虽然在直觉上，基于巨型虚拟机的调度器可提高集群的CPU使用率，但目前我们无法在大型集群上验证我们的实现，同时在大型集群上验证的耗时过长，不易及时发现调度器的性能瓶颈并且快速调整相关参数。本章利用谷歌提供的大型集群中任务调度与任务资源使用情况的追踪数据（trace data）模拟大型集群中真实的任务负载，对之前提出的调度策略进行仿真，并优化其调度算法。在开始使用追踪数据之前，我们将对追踪数据的内容做大致介绍。
 
 \section{集群追踪数据简述}
 本文使用的集群追踪数据（trace data）来自于谷歌的Borg集群（称为cell），包含了一个含有12.5k台机器的集群在29天的追踪周期里的运行情况。具体来说，我们用于集群仿真的数据是ClusterData-2011-2，从北美东部夏令时2011年五月一日的19点整开始进行追踪，持续了29天。较长的追踪时间和较大的机器数量保证了追踪数据的代表性和说服力，使得数据能够真实地反应分布式集群的任务负载及其调度情况。Borg\cite{borg}是谷歌在2015年提出的分布式集群调度框架，对于一个Borg集群（称为cell），有一个Borg Master，每个节点上运行一个Borglet，与Borg Master通信，作出资源分配决策。Borglet计算任务负载并将计算结果放在缓存中，并与Borg Master沟通需要进行的操作，但不与Borg Master频繁沟通，为了防止Borg Master负载过重而宕机。Borg使用容器做到了资源的细粒度分配与限制，资源用量数据通过容器来测量。追踪数据分为对以下几个方面的数据的记录：机器事件（机器加入或离开集群，以及配置更新）、机器属性（包含对机器内核版本、硬件配置、网络配置等多个属性），以及作业（Job）和任务（Task）事件表，记录了作业和任务的生命周期，以及任务在各个采样时间段的资源用量情况。在任何一组数据中，都含有一个或几个时间戳。追踪数据中的时间戳是一个64位的无符号整数，从追踪时间段的前600秒算起，这是为了支持两个特殊时间戳：0代表发生在追踪时间段之前的事件，而$2^{64}-1$（最大的64位无符号数）表示发生在追踪时间段之后的事件。丰富的数据类型对集群的工作状态进行了详细的描述，利用这些数据可以完整地复现一个真实大小的集群，相比于在真实集群上进行测试，可以相当快速地完成模拟。
@@ -68,13 +68,13 @@ class Machine:
 
 \noindent\textbf{进程类（Task）}\quad \label{chap:task}进程类表示一个可以被集群调度的实体，占用集群资源。进程类中的字段有：每个进程的进程号，优先级，CPU使用率上限，和一些时间戳，包括被调度的时刻（$schedule$），开始运行的时刻$running\_start$，以及在资源没有被挤兑或抢占时应该获得的运行时间$duration$，还有每个追踪时间段的资源用量列表，每个列表元素包括此时间段的起止时间，时间段内的平均CPU使用率，最大CPU使用率，以及分配给整个容器进程的内存大小。在读取$task\_events$数据时，将$SUBMIT$事件的时间戳填入到Task类的$schedule$字段中，表示进程被调度到某个机器上（不一定开始运行）；将$SCHEDULE$到$FINISH$的时间差填入$duration$字段，表示进程以最充足资源完成所消耗的时间；将CPU使用率上限填入$request$字段。在读取$task\_usage$数据时，将$usage$字段用每个追踪时间段的资源用量列表填满。每当机器的负载超过$cap$时（见下文介绍），其上运行的所有进程的$duration$加上一定的数值，表明其QoS受到影响。于是，我们可以通过Task的$duration$字段与等待被调度运行的时间之和（$duration + schedule - running\_start$）判断QoS violation的程度（也计作$duration$），即服务质量的影响程度。$duration$表征了一个任务从被调度到运行完成所用的时间，若任务不合理分布则$duration$值较大。
 
-\noindent\textbf{机器类（Machine）}\quad \label{chap:machine}机器类表示集群中的一个节点，可以和其他任何节点进行网络通信，具有固定的处理能力和负载能力。机器类中的字段有：机器编号$machine\_id$，被调度到该机器上的的所有进程的集合（分为正在运行）$tasks$、等待被调度运行的进程集合$pending$，以及每台机器的容载能力$cap$和当前的负载$request$。每个机器的容载能力设置为$0.5$。当任务被提交到某个机器上时，如果该机器还可以容纳这个任务的负载，则该任务被加入到$tasks$集合，并且将该进程的负载累加到$request$字段，并将该任务的$running\_start$字段置为当前时间戳；如果机器无法容纳该任务的负载，则将该进程加入到$pending$集合，等待其他任务的完成再开始运行。我们通过Machine类提供的$get\_usage(timestamp)$接口来统计某个时刻机器上所有进程的CPU使用量，即当前机器的负载。我们将本机器的负载与实际容载能力相减（$get\_usage(timestamp) - cap$）来判断机器$overcommit$（超量提供）的程度，从而得知任务负载是否合理分布。$overcommit$表征了机器上任务负载超过其容载能力的情况，若任务不合理分布则$overcommit$值较大。
+\noindent\textbf{机器类（Machine）}\quad \label{chap:machine}机器类表示集群中的一个节点，可以和其他任何节点进行网络通信，具有固定的处理能力和负载能力。机器类中的字段有：机器编号$machine\_id$，被调度到该机器上的的所有进程的集合（分为正在运行）$tasks$、等待被调度运行的进程集合$pending$，以及每台机器的容载能力$cap$和当前的负载$request$。每个机器的容载能力设置为$0.5$。当任务被提交到某个机器上时，如果该机器还可以容纳这个任务的负载，则该任务被加入到$tasks$集合，并且将该进程的负载累加到$request$字段，同时把该任务的$running\_start$字段置为当前时间戳；如果机器无法容纳该任务的负载，则将该进程加入到$pending$集合，等待其他任务的完成再开始运行。我们通过Machine类提供的$get\_usage(timestamp)$接口来统计某个时刻机器上所有进程的CPU使用量，即当前机器的负载。我们将本机器的负载与实际容载能力相减（$get\_usage(timestamp) - cap$）来判断机器$overcommit$（超量提供）的程度，从而得知任务负载是否合理分布。$overcommit$表征了机器上任务负载超过其容载能力的情况，若任务不合理分布则$overcommit$值较大。
 
-\noindent\textbf{调度器类（Scheduler）}\quad \label{chap:scheduler}这是模拟系统中的核心类，是整个集群的任务调度器。在任务调度器类被创建时，它初始化其所拥有的所有机器类。它包含一个$schedule()$接口，用于随机地向机器提交可供运行的任务，任务被随机地提交到所有的机器上。它还包含一个$migrate()$接口，用于在每个迁移周期中进行任务的重新均衡，即模拟了巨型虚拟机的任务迁移功能。本章通过$migrate()$接口实现并测试了不同的调度算法。调度器类输出整个调度过程的结果，包括前文所述的$duration$和$overcommit$，还包括整个集群的平均CPU使用率，集群每个机器的平均CPU使用率的数组的基尼系数（基尼系数越低则集群任务负载的分布越均衡），以及整个迁移过程的网络开销$migration\_mem$（单位：kb/s）。我们的目标是，相较于随机调度的集群，有巨型虚拟机负载均衡功能的集群具有更高的平均CPU使用率，具有更低的基尼系数，更低的$duration$和$overcommit$。而对于不同的巨型虚拟机调度策略，更好的调度策略除了达成以上三个目的之外，还要具有更低的网络开销。
+\noindent\textbf{调度器类（Scheduler）}\quad \label{chap:scheduler}这是模拟系统中的核心类，是整个集群的任务调度器。在任务调度器类被创建时，它初始化其所拥有的所有机器类。它包含一个$schedule()$接口，用于随机地向机器提交可供运行的任务，任务被随机地提交到所有的机器上。它还包含一个$migrate()$接口，用于在每个迁移周期中进行任务的重新均衡，即模拟了巨型虚拟机的任务迁移功能。本章通过$migrate()$接口实现并测试了不同的调度算法。调度器类输出整个调度过程的结果，包括前文所述的$duration$和$overcommit$，还包括整个集群的平均CPU使用率，集群每个机器的平均CPU使用率的数组的基尼系数（基尼系数越低则集群任务负载的分布越均衡），以及整个迁移过程的网络开销$migration\_mem$（单位：kb/s）。我们的目标是，相较于随机调度的集群，有巨型虚拟机负载均衡功能的集群具有更高的平均CPU使用率，以及更低的基尼系数、更低的$duration$和$overcommit$。而对于不同的巨型虚拟机调度策略，更好的调度策略除了达成以上三个目的之外，还要具有更低的网络开销。
 
 除此之外，还有不属于任何类的$parse\_input()$函数和$simulate()$函数。$parse\_input()$函数负责读取$task\_events$数据和$task\_usage$数据，填充所有Task类，并初始化所有相关数据结构；$simulate()$函数负责遍历整个追踪过程中所有的时间戳，将每一个时间戳上$SUBMIT$的任务调度到任意的节点上，每隔一个$INTERVAL$执行平衡函数$migrate()$（与不执行该调度函数相对比）。在每个时间戳上，还要调用Scheduler类提供的$record\_and\_update\_duration()$和$process()$接口，更新机器上任务的状态（如某个任务$FINISH$，从机器的tasks中退出），并且更新各个统计数据。
 
-综上，我们每次模拟输出的数据有：（1）所有机器的平均CPU使用率$mean$，（2）所有机器CPU使用率的基尼系数的平均值$gini$，（3）所有机器的资源超量提供量$overcommit$，（4）所有任务的平均延迟$duration$，（5）平衡过程造成的网络开销$migration\_mem$。我们通过对集群中的机器数量$n\_machines$以及所有任务的资源超量提供比例$overcommit\_ratio$进行变更，而不变化待处理任务的总量，获取每种配置下的模拟输出，来观察不同的平衡算法的性能。
+综上，我们每次模拟输出的数据有：（1）所有机器的平均CPU使用率$mean$，（2）所有机器CPU使用率的基尼系数的平均值$gini$，（3）所有机器的资源超量提供量$overcommit$，（4）所有任务的平均延迟$duration$，（5）平衡过程造成的网络开销$migration\_mem$。我们通过对集群中的机器数量$n\_machines$以及所有任务的资源超量提供比例$overcommit\_ratio$进行变更，而不变化待处理任务的总量，对调度算法进行仿真，获取每种配置下的模拟输出，来观察不同的平衡算法的性能。
 
 \subsection{粗粒度调度器的仿真}
 \begin{figure}[!htp]
@@ -85,7 +85,7 @@ class Machine:
     {Simulation of Coarse-Grained Scheduler}
   \label{fig:simucoarse}
 \end{figure}
-我们通过设计调度算法来仿真真实环境下巨型虚拟机中shell脚本的功效。如图\ref{fig:simucoarse}所示，集群中每四个节点部署一个巨型虚拟机，这四个节点组成一个$G\_cell$（GiantVM Cell），每次选取负载最低的一个节点作为进程迁移的目的节点。在我们的实现中，$G\_cell$由四个节点组成，每10个时间戳为一个平衡周期，$migrate()$函数在平衡周期的第一个时间戳被调用。其主要算法类似于算法\ref{algo:coarse}但又有所不同：算法\ref{algo:simucoarse}实现了模拟的粗粒度调度器，$migrate()$函数遍历集群中所有的$G\_cell$，在每个$G\_cell$中，找出负载最低的节点，并且$get\_migratable\_tasks()$函数将$G\_cell$中其余三个节点的可迁移进程保存在$removed$集合中。$get\_migratable\_tasks()$函数判断task是否是可迁移进程的标准是其priority小于2且CPU的最大使用率为0.025以下。接下来，统计该节点所有可迁移进程的资源占用量$util\_diff$。将$util\_diff$加到占用最低的节点上，$is\_useful\_migrate()$函数规定出现以下情况时不可迁移：（1）迁移后占用最低节点的占用率比当前节点高；（2）$util\_diff$大于当前节点负载的80\%；（3）迁移后占用最低节点的占用率超过了节点负载量警戒线（目前设置为节点的最大负载能力，$warning\_threshold$）。如果不符合迁移的条件，则该节点上的可迁移进程不被迁移，并在当前$G\_cell$中继续遍历下一个节点。如果符合迁移条件，$removed$集合中的所有进程将被迁移到$G\_cell$内部负载最低的节点上，同时将这次迁移的网络开销加到$bandwidth\_usage$变量上。对于不开启GiantVM平衡功能的集群，$bandwidth\_usage$将为0，远低于开启GiantVM迁移功能的集群，故GiantVM的迁移也可视作牺牲网络带宽来换取CPU使用率的一种方法。
+我们通过设计调度算法来模拟真实环境下巨型虚拟机中shell脚本的功效。如图\ref{fig:simucoarse}所示，集群中每四个节点部署一个巨型虚拟机，这四个节点组成一个$G\_cell$（GiantVM Cell），每次选取负载最低的一个节点作为进程迁移的目的节点。在我们的实现中，$G\_cell$由四个节点组成，每10个时间戳为一个平衡周期，$migrate()$函数在平衡周期的第一个时间戳被调用。其主要算法类似于算法\ref{algo:coarse}但又有所不同：算法\ref{algo:simucoarse}实现了模拟的粗粒度调度器，$migrate()$函数遍历集群中所有的$G\_cell$，在每个$G\_cell$中，找出负载最低的节点，并且$get\_migratable\_tasks()$函数将$G\_cell$中其余三个节点的可迁移进程保存在$removed$集合中。$get\_migratable\_tasks()$函数判断task是否是可迁移进程的标准是其priority小于2且CPU的最大使用率为0.025以下。接下来，统计该节点所有可迁移进程的资源占用量$util\_diff$。将$util\_diff$加到占用最低的节点上，$is\_useful\_migrate()$函数规定出现以下情况时不可迁移：（1）迁移后占用最低节点的占用率比当前节点高；（2）$util\_diff$大于当前节点负载的80\%；（3）迁移后占用最低节点的占用率超过了节点负载量警戒线（目前设置为节点的最大负载能力，$warning\_threshold$）。如果不符合迁移的条件，则该节点上的可迁移进程不被迁移，并在当前$G\_cell$中继续遍历下一个节点。如果符合迁移条件，$removed$集合中的所有进程将被迁移到$G\_cell$内部负载最低的节点上，同时将这次迁移的网络开销加到$bandwidth\_usage$变量上。对于不开启GiantVM平衡功能的集群，$bandwidth\_usage$将为0，远低于开启GiantVM迁移功能的集群，故GiantVM的迁移也可视作牺牲网络带宽来换取CPU使用率的一种方法。
 
 \begin{algorithm}[h]
 \begin{algorithmic}[1]
@@ -106,7 +106,7 @@ class Machine:
 \label{algo:simucoarse}
 \end{algorithm}
 
-根据第二章和第三章的分析，粗粒度的调度有助于集群的负载均衡，提高了整体的CPU使用率，且被迁移进程之间不会共享内存。同时，任务的$duration$和机器的$overcommit$都应该下降，因为此调度算法缓解了任务分布不合理所造成的QoS violation，即缓解了单个节点上的CPU需求会短时间爆发性的增长、超过该机器的容载能力的情况，而通过资源重分配利用了长时间处于较低负载状态的机器上多余的资源。仿真算法中，宿主机上的进程可以直接被移送到GiantVM中，被调度到其他节点上，而真实环境下虚拟机和宿主机之间不可以交换进程，这个限制尚未在仿真脚本中进行模拟。事实上，客户机和宿主机之间可以进行网络通信，可以通过网络在客户机与宿主机之间交换进程，这一方案的可行性尚未调查。
+根据第二章和第三章的分析，粗粒度的调度有助于集群的负载均衡，提高了整体的CPU使用率，且被迁移进程之间不会共享内存。同时，任务的$duration$和机器的$overcommit$都应该下降，因为此调度算法缓解了任务分布不合理所造成的QoS violation，即缓解了单个节点上的CPU需求会短时间爆发性的增长、超过该机器的容载能力的情况，而通过资源重分配利用了长时间处于较低负载状态的机器上多余的资源。在我们的仿真算法中，宿主机上的进程可以直接移送到GiantVM中，进而可以被调度到其他节点上，而在真实环境下虚拟机和宿主机之间不可以交换进程，这个限制尚未在仿真脚本中进行模拟。事实上，客户机和宿主机之间可通过网络等手段交换进程，但这一方案的可行性尚未调查。
 
 \section{细粒度调度器的仿真与调优}
 上节所述的粗粒度调度器存在许多可以优化的方面：粗粒度调度器只在$G\_cell$中选取负载最低的节点（$lowest\_loaded\_node$），事实上$G\_cell$中可能存在和$lowest\_loaded\_node$负载状况相近的节点，这些负载同样很低的节点没有得到充分利用；其次，粗粒度调度器中对除了$lowest\_loaded\_node$之外的所有节点的任务进行筛选，选出可以迁移的优先级较低的任务迁移到$lowest\_loaded\_node$上。这样会造成较大的网络开销，例如$G\_cell$中有四个节点，则需要将三个节点上的可迁移进程全部进行迁移。这个问题在真实环境下也存在：真实环境下的巨型虚拟机调度器将客户机中所有的进程在NUMA节点之间迁移，而整个操作系统中的进程内存总量是很可观的，从而也会造成单节点上的网络带宽被严重占用。
